--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {"dev": "parcel src/index.html"},
   "keywords": [],
   "author": "",
   "license": "ISC",
