--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {"dev": "parcel src/index.html"},
+  "scripts": {
+    "dev": "parcel src/index.html"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
